Found a better layout that avoids pixel gaps between squares

--- a/sudoku.css
+++ b/sudoku.css
@@ -34,7 +34,7 @@
 }
 
 #button-container {
-  clear:both;
+  clear: both;
   padding: 5%;
 }
 
@@ -44,4 +44,37 @@
   width: calc(100% + 4px);
   border: 2px solid black;
   margin-left: -2px;
+}
+
+.s-square {
+  float: left;
+  position: relative;
+  width: calc(100% / 9);
+  padding-bottom : calc(100% / 9 - 2px); /* = width for a 1:1 aspect ratio */
+  /* margin:1.66%; */
+  overflow: hidden;
+}
+
+.s-square-content {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
+.s-square-table{
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+.s-square-table-cell {
+  display: table-cell;
+  vertical-align: middle;
+  height: 100%;
+  width: 100%;
+}
+
+.s-cell-value {
+  /* border: 1px solid black; */
 }
